[gd_scene load_steps=2 format=3 uid="uid://dp2debyvjyowt"]

[ext_resource type="Script" uid="uid://bap2h5t0ed854" path="res://scripts/ui/options_menu.gd" id="1_ta2k2"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 100.0
offset_right = -200.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ta2k2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Options" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="MasterVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MusicVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SFXVolume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"
